Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.0.2 (??/??/????):
	Pidgin:
	* Added a custom conversation font option to preferences

	libpurple:
	* Moving an ICQ buddy from one group to another no longer
	  re-requests authorization from that person (Rene Hausleitner)
	* Added nullprpl, an example protocol plugin (Ryan Barrett)
	* Fixed SOCKS5 bug which caused Jabber file receiving to fail

	Finch:
	* Auto account reconnecting

version 2.0.1 (05/24/2007):
	* Buddy list update speedups when buddy icons are not being
	  displayed.  (Scott Wolchok)
	* Fix icons on docklet change status menu to match the status selector
	* Custom smileys on MSN can be saved by right-clicking on them
	* Fix a crash deleting a buddy that is in the Buddy List more than once
	* Compile fixes for Solaris
	* Fix GTalk formatting when there's a space before/after a */_
	* Fix Log viewer crash when the filename is not in the expected format
	* Get User Info now provides immediate feedback, and is updated when the
	  user information is available
	* Make the choose buddy icon dialog correctly list the current directory
	* Fix for buddy icons disappearing
	* Timestamps are always on in debug output (-d) and Debug Window now
	* Don't escape html entities in Yahoo! system messages
	* Fix for the choose buddy icon dialog resizing strangely as files are selected
	* Receives notifications when XMPP buddies send "leaving chat"
	  messages
	* Fix the typing animation so it doesn't stop animating once a conversation
	  has gone from typing -> not typing -> typing
	* Fix error messages when joing XMPP chats
	* Identify the account when warning about plaintext auth over an
	  unencrypted channel
	* Fix XMPP SASL authentication error when using Cyrus and a connect server
	* Fix changing tab locations to update properly
	* Turning off "Show formatting on incoming messages" now ignores
	  formatting in <span> tags too